EMPLOYE page:- Institue Update collapseble code fixed.

--- a/Employee/css/style.css
+++ b/Employee/css/style.css
@@ -33,6 +33,7 @@
 }
 .side-nav button{
     color: #fff;
+    box-shadow: none;
 }
 .side-nav ul{
     list-style: none;
